Fix usermenu on small screens

--- a/src/scss/header/_medium.scss
+++ b/src/scss/header/_medium.scss
@@ -19,4 +19,29 @@
             margin-right: auto;
         }
     }
+
+    .usermenu {
+        &:hover {
+            .usermenu-info ul {
+                display: block;
+            }
+        }
+
+        .usermenu-info{
+            display: block;
+            margin-top: 0;
+            padding: 0;
+            background-color: transparent;
+
+            .usermenu-user{
+                padding: 0.5em 3em 0.45em 0;
+            }
+
+            ul {
+                display: none;
+                padding: 0.5em;
+                background-color: white;
+            }
+        }
+    }
 }
